@@ -19,6 +19,7 @@
 - Update ausearch parsing
 - Update auparse to handle virt events
 - Make audisp-remote robust
+- Add 2 error returns to python bindings
 
 1.7.18
 - Update time examples in ausearch/report man pages
